# satori-v2

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: phase1_summary.md  phase2_design.md  phase3_design.md  phase4_design.md  phase5_design.md  phase5_snapshot_instructions.md  phase6_live_testing.md  phase7_design.md  phase8_nmap.md  phase9_alerts.md  trust_model.md  validation.md
scripts/: pcap_summary.py
signatures/: v1.json
tests/: conftest.py  test_cli_analyze_regression.py  test_cli_integration.py  test_cli_live_alerts_regression.py  test_cli_live_end_to_end.py  test_cli_live_regression.py  test_cli_live_regression_outputs.py  test_cli_live_replay.py  test_cli_live_replay_regression.py  test_cli_live_stdout.py  test_cli_nmap_regression.py  test_cli_phase7_regression.py  test_cli_ssh_integration.py  test_cli_ssh_os_hint_integration.py  test_cli_stdout_json.py  test_coverage_metrics.py  test_dhcp_extractor.py  test_dns_extractor.py  test_host_aggregation.py  test_ingest.py  test_live_capture.py  test_live_incremental.py  test_live_ingest.py  test_nmap_download_fallback.py  test_nmap_integration_merge.py  test_nmap_lookup_basic.py  test_nmap_lookup_determinism.py  test_nmap_lookup_empty.py  test_nmap_lookup_regression.py  test_nmap_parse.py  test_ntp_extractor.py  test_ntp_md5_sample.py  test_phase2_evidence_hash.py  test_phase2_os_inference_provenance.py  test_phase2_os_inference_regression.py  test_phase2_os_inference_structure.py  test_phase2_schema.py  test_phase2_scoring_ambiguity_penalty.py  (+25 more)
(+76 files in other folders)
