[tool.poetry]
name = "satori-offline"
version = "0.1.0"
description = "Passive OS fingerprinting toolkit (offline + live)"
authors = ["Satori Team <devnull@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dpkt = "^1.9.0"
pcapng = "^0.23"
lmdb = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
